@@ -27,6 +27,9 @@ Fixed printing of `typedef`s of nested types, e.g.:
     c++decl> show
     typedef S::I T;
 
+** `restrict` arrays
+Arrays being `restrict` except as function parameter is now correctly illegal.
+
 ** Types in error & warning messages
 For types that are `typedef`s, now printing `aka` followed by their underlying
 types in more cases.
